--- a/index.html
+++ b/index.html
@@ -4,6 +4,33 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Calculadora EV · Energía de Carga</title>
+
+<!-- Favicon -->
+<link rel="icon" type="image/png" href="icono_calc.png">
+<link rel="shortcut icon" href="icono_calc.png">
+<link rel="apple-touch-icon" href="icono_calc.png">
+
+<!-- Meta tags SEO -->
+<meta name="description" content="Calcula cuántos kWh necesitas cargar y cuánto pagarás en la estación eléctrica. Herramienta para vehículos eléctricos con tarifa Terpel Feb 2026.">
+<meta name="author" content="Esteban G - Kokito Star">
+<meta name="robots" content="index, follow">
+<meta name="theme-color" content="#07090d">
+
+<!-- Open Graph (WhatsApp, Facebook, LinkedIn) -->
+<meta property="og:type" content="website">
+<meta property="og:title" content="Calculadora EV · Energía de Carga">
+<meta property="og:description" content="Calcula cuántos kWh necesitas cargar y cuánto pagarás en la estación eléctrica. Tarifa Terpel Feb 2026.">
+<meta property="og:image" content="meta_tag_calc.png">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+<meta property="og:image:alt" content="Calculadora de Energía de Carga EV">
+<meta property="og:locale" content="es_CO">
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Calculadora EV · Energía de Carga">
+<meta name="twitter:description" content="Calcula cuántos kWh necesitas cargar y cuánto pagarás en la estación eléctrica.">
+<meta name="twitter:image" content="meta_tag_calc.png">
 <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800&family=Space+Grotesk:wght@500;600;700&family=Fira+Code:wght@400;500&display=swap" rel="stylesheet">
 <style>
 *, *::before, *::after { margin:0; padding:0; box-sizing:border-box; }
